[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui/hud/hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/map/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/inventory/inventory_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/progress_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/progress_bar_frame_v.png" type="Texture" id=5]
[ext_resource path="res://scenes/tutorial/tutorial.gd" type="Script" id=6]
[ext_resource path="res://misc/gamesave_service.gd" type="Script" id=7]
[ext_resource path="res://misc/random_event_tiles.gd" type="Script" id=8]
[ext_resource path="res://ui/temperature_bar.gd" type="Script" id=10]
[ext_resource path="res://misc/event_service.gd" type="Script" id=11]
[ext_resource path="res://assets/ui/progress_bar_v.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/progress_bar_frame.png" type="Texture" id=14]
[ext_resource path="res://resources/terrain_tileset.tres" type="TileSet" id=15]
[ext_resource path="res://ui/event_board/event_board.tscn" type="PackedScene" id=17]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=18]
[ext_resource path="res://ui/journal/journal.tscn" type="PackedScene" id=19]
[ext_resource path="res://misc/world_fog/world_fog.tscn" type="PackedScene" id=20]
[ext_resource path="res://resources/events_tileset.tres" type="TileSet" id=21]
[ext_resource path="res://misc/event_tiles.gd" type="Script" id=22]

[node name="Main2" type="Node2D"]
script = ExtResource( 6 )

[node name="Terrain" type="TileMap" parent="."]
z_index = -1
mode = 1
tile_set = ExtResource( 15 )
cell_size = Vector2( 24, 12 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -524293, 3, 1, -458757, 3, 1, -458756, 3, 0, -458755, 3, 0, -458754, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -524285, 3, 2, -524284, 3, 0, -524283, 3, 0, -393221, 3, 2, -393220, 3, 2, -393219, 3, 2, -393218, 7, 0, -393217, 7, 0, -458752, 7, 0, -458751, 7, 0, -458750, 7, 0, -458749, 3, 1, -458748, 3, 1, -458747, 3, 1, -327685, 3, 1, -327684, 3, 0, -327683, 3, 1, -327682, 7, 0, -327681, 7, 0, -393216, 7, 0, -393215, 7, 0, -393214, 7, 0, -393213, 3, 0, -393212, 3, 1, -393211, 3, 1, -262149, 3, 2, -262148, 3, 2, -262147, 3, 2, -262146, 6, 0, -262145, 7, 0, -327680, 7, 0, -327679, 7, 0, -327678, 6, 0, -327677, 3, 2, -327676, 3, 0, -327675, 3, 2, -196613, 3, 0, -196612, 3, 2, -196611, 7, 0, -196610, 6, 0, -196609, 6, 0, -262144, 6, 0, -262143, 7, 0, -262142, 6, 0, -262141, 6, 0, -262140, 3, 2, -262139, 3, 0, -131077, 1, 0, -131076, 7, 0, -131075, 6, 0, -131074, 6, 0, -131073, 6, 0, -196608, 6, 0, -196607, 6, 0, -196606, 6, 0, -196605, 7, 0, -196604, 4, 0, -196603, 3, 0, -65541, 1, 0, -65540, 6, 0, -65539, 6, 0, -65538, 6, 0, -65537, 6, 0, -131072, 6, 0, -131071, 6, 0, -131070, 6, 0, -131069, 6, 0, -131068, 9, 1, -131067, 1, 0, -5, 1, 0, -4, 9, 0, -3, 6, 0, -2, 6, 0, -1, 6, 0, -65536, 6, 0, -65535, 6, 0, -65534, 7, 0, -65533, 6, 0, -65532, 8, 0, -65531, 1, 0, 65531, 1, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 3, 0, 5, 1, 0, 131067, 1, 0, 131068, 6, 0, 131069, 6, 0, 131070, 6, 0, 131071, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 7, 0, 65540, 3, 0, 65541, 1, 0, 196602, 3, 2, 196603, 1, 0, 196604, 7, 0, 196605, 6, 0, 196606, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 7, 0, 131075, 7, 0, 131076, 3, 1, 131077, 3, 1, 262138, 3, 2, 262139, 3, 0, 262140, 8, 1, 262141, 7, 0, 262142, 6, 0, 262143, 6, 0, 196608, 6, 0, 196609, 7, 0, 196610, 7, 0, 196611, 8, 2, 196612, 3, 1, 196613, 3, 0, 327675, 3, 1, 327676, 9, 0, 327677, 8, 2, 327678, 7, 0, 327679, 6, 0, 262144, 7, 0, 262145, 7, 0, 262146, 8, 0, 262147, 8, 2, 262148, 3, 0, 262149, 3, 2, 393211, 3, 1, 393212, 3, 0, 393213, 9, 1, 393214, 9, 2, 393215, 4, 1, 327680, 9, 0, 327681, 8, 0, 327682, 8, 2, 327683, 4, 2, 327684, 3, 2, 458748, 3, 2, 458749, 3, 0, 458750, 4, 1, 458751, 4, 2, 393216, 4, 1, 393217, 4, 1, 393218, 4, 0, 393219, 4, 2, 393220, 3, 2, 524285, 3, 0, 524286, 3, 0, 524287, 3, 1, 458752, 3, 1, 458753, 3, 2, 458754, 3, 2, 458755, 3, 1, 458756, 3, 1, 589822, 3, 0, 589823, 3, 1, 524288, 3, 2, 524290, 3, 0, 524291, 3, 1 )
script = ExtResource( 8 )
trigger_chance = 10
_audio_player_path = NodePath("../AudioStreamPlayer")
tile_events = {
"forest": [ "wolf_attack", "berry_bush" ]
}

[node name="EventTiles" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 21 )
cell_size = Vector2( 24, 12 )
cell_tile_origin = 1
cell_y_sort = true
show_collision = true
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -393218, 5, 0, -393217, 5, 0, -458752, 5, 0, -458751, 5, 0, -458750, 5, 0, -262143, 23, 0, -65538, 22, 0, -65535, 11, 0, 65533, 21, 0, 196606, 20, 0 )
script = ExtResource( 22 )

[node name="Player" parent="." instance=ExtResource( 18 )]
position = Vector2( 0, 6 )
tutorial_mode = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 6 )
current = true
zoom = Vector2( 0.125, 0.125 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_bottom = 396.0

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
visible = false
margin_right = 256.0
margin_bottom = 12.0
value = 12.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.188235, 0.188235, 0.188235, 1 )
tint_over = Color( 0.14902, 0.14902, 0.14902, 1 )
tint_progress = Color( 0.521569, 0.156863, 0.156863, 1 )

[node name="InventoryList" parent="CanvasLayer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_left = -1889.0
margin_top = -540.0
margin_right = -1333.0
margin_bottom = -340.0
items = [ "Item 0", null, false, "Item 1", null, false, "Climbing Gear", null, false, "Car Battery", null, false ]

[node name="TemperatureBar" type="TextureProgress" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -276.0
margin_right = 31.0
margin_bottom = -20.0
max_value = 200.0
value = 200.0
texture_under = ExtResource( 13 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 13 )
fill_mode = 3
tint_under = Color( 0.188235, 0.188235, 0.188235, 1 )
tint_over = Color( 0.321569, 0.745098, 0.811765, 1 )
tint_progress = Color( 0.6, 0.227451, 0.227451, 1 )
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="CanvasLayer/TemperatureBar"]

[node name="Journal" parent="CanvasLayer" instance=ExtResource( 19 )]
unique_name_in_owner = true
visible = false

[node name="EventBoard" parent="CanvasLayer" instance=ExtResource( 17 )]
pause_mode = 2
visible = false

[node name="Map" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
unique_name_in_owner = true

[node name="EventService" type="Node" parent="."]
script = ExtResource( 11 )
player = NodePath("../Player")
board = NodePath("../CanvasLayer/EventBoard")

[node name="WorldFog" parent="." instance=ExtResource( 20 )]
tilemap_paths = [ NodePath("../EventTiles"), NodePath("../Terrain") ]

[node name="GameSaveService" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 7 )
player = NodePath("../Player")
terrain = NodePath("../Terrain")
event_tiles = NodePath("../EventTiles")
event_service = NodePath("../EventService")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="unfog_cell" from="." to="WorldFog" method="_on_unfog_cell"]
[connection signal="event_triggered" from="Terrain" to="EventService" method="start_event"]
[connection signal="event_triggered" from="EventTiles" to="EventService" method="start_event"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="moved" from="Player" to="Terrain" method="_on_Player_moved"]
[connection signal="moved" from="Player" to="GameSaveService" method="_on_Player_moved"]
[connection signal="temperature_updated" from="Player" to="CanvasLayer/TemperatureBar" method="_on_Player_temperature_updated"]
[connection signal="inventory_button_pressed" from="CanvasLayer/HUD" to="CanvasLayer/InventoryList" method="_on_HUD_inventory_button_pressed"]
[connection signal="inventory_unlocked" from="CanvasLayer/HUD" to="." method="_on_HUD_inventory_unlocked"]
[connection signal="journal_button_pressed" from="CanvasLayer/HUD" to="CanvasLayer/Journal" method="_on_JournalButton_pressed"]
[connection signal="journal_unlocked" from="CanvasLayer/HUD" to="." method="_on_HUD_journal_unlocked"]
[connection signal="map_button_pressed" from="CanvasLayer/HUD" to="CanvasLayer/Map" method="_on_HUD_map_button_pressed"]
[connection signal="map_unlocked" from="CanvasLayer/HUD" to="." method="_on_HUD_map_unlocked"]
[connection signal="load_game" from="CanvasLayer/Journal" to="GameSaveService" method="_on_Journal_load_game"]
[connection signal="choice_selected" from="CanvasLayer/EventBoard" to="EventService" method="apply_outcome"]
[connection signal="event_ended" from="CanvasLayer/EventBoard" to="EventService" method="end_event"]
[connection signal="event_function_call" from="EventService" to="." method="_on_EventService_event_function_call"]
[connection signal="update_saves" from="GameSaveService" to="CanvasLayer/Journal" method="_on_GameSaveService_update_saves"]
