[gd_scene load_steps=29 format=2]

[ext_resource path="res://resources/events_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://ui/event_board/event_board.tscn" type="PackedScene" id=2]
[ext_resource path="res://misc/world_fog/world_fog.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://misc/event_service.gd" type="Script" id=5]
[ext_resource path="res://misc/event_tiles.gd" type="Script" id=6]
[ext_resource path="res://ui/top_bar/top_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://misc/gameover_service.gd" type="Script" id=8]
[ext_resource path="res://tutorial.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/progress_bar.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/progress_bar_frame_v.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/progress_bar_v.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/progress_bar_frame.png" type="Texture" id=13]
[ext_resource path="res://ui/temperature_bar.gd" type="Script" id=14]
[ext_resource path="res://misc/random_event_tiles.gd" type="Script" id=15]
[ext_resource path="res://resources/terrain_tileset.tres" type="TileSet" id=16]
[ext_resource path="res://misc/gamesave_service.gd" type="Script" id=17]
[ext_resource path="res://ui/journal/journal.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/cubex4.png" type="Texture" id=19]
[ext_resource path="res://assets/images/Map_UI.png" type="Texture" id=20]
[ext_resource path="res://assets/images/Journal_UI.png" type="Texture" id=21]
[ext_resource path="res://themes/default_body.tres" type="Theme" id=22]
[ext_resource path="res://ui/inventory_list.gd" type="Script" id=23]
[ext_resource path="res://resources/player_inventory.tres" type="Resource" id=24]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.713726, 0.545098, 0.376471, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.411765, 0.239216, 0.0196078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Node2D"]
script = ExtResource( 9 )

[node name="Terrain" type="TileMap" parent="."]
z_index = -1
mode = 1
tile_set = ExtResource( 16 )
cell_size = Vector2( 24, 12 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -589828, 1, 0, -589827, 1, 0, -589826, 1, 0, -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -524292, 1, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -458756, 1, 0, -458755, 1, 0, -458754, 4, 0, -458753, 4, 0, -524288, 4, 2, -524287, 4, 1, -524286, 4, 0, -524285, 1, 0, -524284, 1, 0, -393220, 1, 0, -393219, 1, 0, -393218, 4, 0, -393217, 4, 0, -458752, 4, 0, -458751, 4, 0, -458750, 4, 0, -458749, 1, 0, -458748, 1, 0, -327684, 1, 0, -327683, 1, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 1, 0, -393212, 1, 0, -262148, 1, 0, -262147, 1, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 1, 0, -327676, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 1, 0, -262140, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 1, 0, -196604, 1, 0, -65540, 1, 0, -65539, 1, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 1, 0, -131068, 1, 0, -4, 1, 0, -3, 1, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 1, 0, -65532, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 1, 0, 4, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 1, 0, 65540, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 1, 0, 131076, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 1, 0, 196612, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0 )
script = ExtResource( 15 )
trigger_chance = 10
tile_events = {
"forest": [ "wolf_attack", "berry_bush" ]
}

[node name="EventTiles" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 24, 12 )
cell_tile_origin = 1
cell_y_sort = true
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 3, 0, -65535, 4, 0, 65535, 3, 0, 196607, 3, 0, 262143, 3, 0 )
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 6 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 6 )
current = true
zoom = Vector2( 0.063, 0.063 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopBar" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_bottom = 30.0

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
visible = false
margin_right = 256.0
margin_bottom = 12.0
value = 12.0
texture_under = ExtResource( 10 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.188235, 0.188235, 0.188235, 1 )
tint_over = Color( 0.14902, 0.14902, 0.14902, 1 )
tint_progress = Color( 0.521569, 0.156863, 0.156863, 1 )

[node name="TemperatureBar" type="TextureProgress" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -276.0
margin_right = 31.0
margin_bottom = -20.0
max_value = 200.0
value = 200.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 11 )
texture_progress = ExtResource( 12 )
fill_mode = 3
tint_under = Color( 0.188235, 0.188235, 0.188235, 1 )
tint_over = Color( 0.321569, 0.745098, 0.811765, 1 )
tint_progress = Color( 0.6, 0.227451, 0.227451, 1 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="CanvasLayer/TemperatureBar"]

[node name="InventoryList" type="ItemList" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -637.0
margin_top = -377.0
margin_right = -81.0
margin_bottom = -177.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 22 )
custom_colors/guide_color = Color( 1, 1, 1, 0 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 1 )
custom_styles/selected = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
items = [ "Item 0", null, false, "Item 1", null, false, "Climbing Gear", null, false, "Car Battery", null, false ]
auto_height = true
fixed_column_width = 526
script = ExtResource( 23 )
player_inventory = ExtResource( 24 )

[node name="Icons" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -148.0
margin_right = -88.0
margin_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="MapButton" type="TextureButton" parent="CanvasLayer/Icons"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = ExtResource( 20 )
expand = true

[node name="JournalButton" type="TextureButton" parent="CanvasLayer/Icons"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = ExtResource( 21 )
expand = true

[node name="InventoryButton" type="TextureButton" parent="CanvasLayer/Icons"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = ExtResource( 19 )
expand = true

[node name="Journal" parent="CanvasLayer" instance=ExtResource( 18 )]
visible = false

[node name="EventBoard" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
visible = false

[node name="EventService" type="Node" parent="."]
script = ExtResource( 5 )
player = NodePath("../Player")
board = NodePath("../CanvasLayer/EventBoard")

[node name="WorldFog" parent="." instance=ExtResource( 3 )]
tilemap_paths = [ NodePath("../EventTiles"), NodePath("../Terrain") ]

[node name="GameOverService" type="Node" parent="."]
script = ExtResource( 8 )
final_event_name = "ruins"

[node name="GameSaveService" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 17 )
player = NodePath("../Player")
top_bar = NodePath("../CanvasLayer/TopBar")
terrain = NodePath("../Terrain")
event_tiles = NodePath("../EventTiles")
event_service = NodePath("../EventService")

[connection signal="unfog_cell" from="." to="WorldFog" method="_on_unfog_cell"]
[connection signal="event_triggered" from="Terrain" to="EventService" method="start_event"]
[connection signal="event_triggered" from="EventTiles" to="EventService" method="start_event"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="moved" from="Player" to="Terrain" method="trigger_event_at"]
[connection signal="moved" from="Player" to="GameSaveService" method="_on_Player_moved"]
[connection signal="temperature_updated" from="Player" to="CanvasLayer/TemperatureBar" method="_on_Player_temperature_updated"]
[connection signal="pressed" from="CanvasLayer/Icons/JournalButton" to="GameSaveService" method="_on_JournalButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Icons/InventoryButton" to="CanvasLayer/InventoryList" method="_on_InventoryButton_pressed"]
[connection signal="load_game" from="CanvasLayer/Journal" to="GameSaveService" method="_on_Journal_load_game"]
[connection signal="choice_selected" from="CanvasLayer/EventBoard" to="EventService" method="apply_outcome"]
[connection signal="event_ended" from="CanvasLayer/EventBoard" to="EventService" method="end_event"]
[connection signal="event_ended" from="CanvasLayer/EventBoard" to="GameOverService" method="_on_EventBoard_event_ended"]
[connection signal="show_journal" from="GameSaveService" to="CanvasLayer/Journal" method="_on_GameSaveService_show_journal"]
[connection signal="update_saves" from="GameSaveService" to="CanvasLayer/Journal" method="_on_GameSaveService_update_saves"]
